--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "plan-event",
-  "private": true,
+  "description": "Plan and organize your events",
   "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
+  "author": "Aleksander Fret",
+  "license": "ISC",
+  "private": true,
+  "homepage": "https://github.com/alemikolo/plan-event#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alemikolo/plan-event.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alemikolo/plan-event/issues"
+  },
   "scripts": {
     "lerna-c": "lerna create",
     "lerna-b": "lerna bootstrap"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "lerna": "3.16.5"
   }
