--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plan-event-server",
-  "description": "Plan An Event Server",
+  "description": "Plan An Event - Server",
   "version": "0.1.0",
   "author": "Aleksander Fret",
   "license": "ISC",
