--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "author": "Aleksander Fret",
   "license": "ISC",
-  "main": "src/app/index.ts",
+  "main": "src/app/index.tsx",
   "homepage": "https://github.com/alemikolo/plan-event#readme",
   "repository": {
     "type": "git",
@@ -16,5 +16,62 @@
   "directories": {
     "src": "src",
     "test": "__tests__"
-  }
+  },
+  "scripts": {
+    "build": "webpack --progress --config ./webpack.config.prod.js",
+    "dev": "webpack-dev-server --open --config ./webpack.config.dev.js",
+    "lint": "eslint . --ext \".js,.jsx,.ts,.tsx\""
+  },
+  "dependencies": {
+    "react": "16.10.2",
+    "react-dom": "16.10.2"
+  },
+  "devDependencies": {
+    "@types/html-webpack-plugin": "3.2.1",
+    "@types/mini-css-extract-plugin": "0.8.0",
+    "@types/optimize-css-assets-webpack-plugin": "5.0.1",
+    "@types/react": "16.9.6",
+    "@types/react-dom": "16.9.2",
+    "@types/terser-webpack-plugin": "1.2.1",
+    "@types/webpack": "4.39.3",
+    "@types/webpack-dev-server": "3.1.7",
+    "@typescript-eslint/eslint-plugin": "2.4.0",
+    "@typescript-eslint/parser": "2.4.0",
+    "autoprefixer": "9.6.5",
+    "clean-webpack-plugin": "3.0.0",
+    "css-loader": "3.2.0",
+    "css-modules-typescript-loader": "3.0.1",
+    "eslint": "6.5.1",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-config-prettier": "6.4.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "3.1.1",
+    "eslint-plugin-react": "7.16.0",
+    "eslint-plugin-react-hooks": "2.1.2",
+    "html-webpack-plugin": "3.2.0",
+    "mini-css-extract-plugin": "0.8.0",
+    "node-sass": "4.12.0",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
+    "path": "0.12.7",
+    "postcss-loader": "3.0.0",
+    "prettier": "1.18.2",
+    "sass-loader": "8.0.0",
+    "style-loader": "1.0.0",
+    "stylelint": "11.1.1",
+    "stylelint-config-recommended": "3.0.0",
+    "stylelint-scss": "3.11.1",
+    "terser-webpack-plugin": "2.1.3",
+    "ts-loader": "6.2.0",
+    "typescript": "3.6.4",
+    "webpack": "4.41.2",
+    "webpack-cli": "3.3.9",
+    "webpack-dev-server": "3.8.2"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 9",
+    "not op_mini all"
+  ]
 }
