--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,5 +16,34 @@
   "directories": {
     "src": "src",
     "test": "__tests__"
+  },
+  "scripts": {
+    "build": "tsc --build tsconfig.prod.json",
+    "dev": "TS_NODE_PROJECT='./tsconfig.dev.json' ts-node-dev --respawn ./src src/index.ts",
+    "lint": "eslint . --ext \".js,.ts\"",
+    "orm": "sequelize init"
+  },
+  "dependencies": {
+    "body-parser": "1.19.0",
+    "express": "4.17.1",
+    "mysql": "2.17.1",
+    "sequelize": "5.19.7"
+  },
+  "devDependencies": {
+    "@types/body-parser": "1.17.1",
+    "@types/express": "4.17.1",
+    "@types/node": "12.7.12",
+    "@types/sequelize": "4.28.6",
+    "@typescript-eslint/eslint-plugin": "2.4.0",
+    "@typescript-eslint/parser": "2.4.0",
+    "eslint": "6.5.1",
+    "eslint-config-airbnb-base": "14.0.0",
+    "eslint-config-prettier": "6.4.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-prettier": "3.1.1",
+    "sequelize-cli": "5.5.1",
+    "prettier": "1.18.2",
+    "ts-node-dev": "1.0.0-pre.43",
+    "typescript": "3.6.4"
   }
 }
