--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -27,25 +27,24 @@
     "body-parser": "1.19.0",
     "cors": "2.8.5",
     "express": "4.17.1",
-    "mysql": "2.17.1",
-    "sequelize": "5.21.1"
+    "mysql2": "2.0.0",
+    "sequelize": "5.21.2"
   },
   "devDependencies": {
     "@types/body-parser": "1.17.1",
     "@types/cors": "2.8.6",
-    "@types/express": "4.17.1",
-    "@types/node": "12.11.2",
-    "@types/sequelize": "4.28.6",
-    "@typescript-eslint/eslint-plugin": "2.5.0",
-    "@typescript-eslint/parser": "2.5.0",
-    "eslint": "6.5.1",
+    "@types/express": "4.17.2",
+    "@types/node": "12.12.5",
+    "@typescript-eslint/eslint-plugin": "2.6.0",
+    "@typescript-eslint/parser": "2.6.0",
+    "eslint": "6.6.0",
     "eslint-config-airbnb-base": "14.0.0",
-    "eslint-config-prettier": "6.4.0",
+    "eslint-config-prettier": "6.5.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-prettier": "3.1.1",
-    "sequelize-cli": "5.5.1",
     "prettier": "1.18.2",
-    "ts-node-dev": "1.0.0-pre.43",
+    "sequelize-cli": "5.5.1",
+    "ts-node-dev": "1.0.0-pre.44",
     "typescript": "3.6.4"
   }
 }
