[PE-3] Refactor directory structure in server package

--- a/packages/server/.eslintrc
+++ b/packages/server/.eslintrc
@@ -23,6 +23,12 @@
     "brace-style": ["error", "1tbs", { "allowSingleLine": true }],
     "comma-dangle": ["error", "never"],
     "comma-spacing": ["warn"],
+    "@typescript-eslint/consistent-type-assertions": [
+      "error",
+      {
+        "assertionStyle": "angle-bracket"
+      }
+    ],
     "computed-property-spacing": ["error", "never"],
     "eqeqeq": ["error", "smart"],
     "func-call-spacing": ["error", "never"],
