--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -2,8 +2,12 @@
   "name": "plan-event-browser",
   "description": "Plan An Event - Browser",
   "version": "0.1.0",
-  "author": "Aleksander Fret",
-  "license": "ISC",
+  "author": {
+    "name": "Aleksander Fret",
+    "email": "olekfret80@gmail.com",
+    "url": "https://github.com/alemikolo/"
+  },
+  "license": "MIT",
   "main": "src/app/index.tsx",
   "homepage": "https://github.com/alemikolo/plan-event#readme",
   "repository": {
