--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -20,7 +20,10 @@
   "scripts": {
     "build": "webpack --progress --config ./webpack.config.prod.js",
     "dev": "webpack-dev-server --open --config ./webpack.config.dev.js",
-    "lint": "eslint . --ext \".js,.jsx,.ts,.tsx\""
+    "check": "npm-run-all lint format stylelint",
+    "format": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint": "eslint . --ext \".js,.jsx,.ts,.tsx\"",
+    "stylelint": "stylelint src/**/*.scss --cache"
   },
   "dependencies": {
     "react": "16.11.0",
@@ -50,8 +53,10 @@
     "eslint-plugin-react": "7.16.0",
     "eslint-plugin-react-hooks": "2.1.2",
     "html-webpack-plugin": "3.2.0",
+    "lint-staged": "9.4.2",
     "mini-css-extract-plugin": "0.8.0",
     "node-sass": "4.12.0",
+    "npm-run-all": "4.1.5",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "path": "0.12.7",
     "postcss-loader": "3.0.0",
@@ -73,5 +78,22 @@
     "not dead",
     "not ie <= 9",
     "not op_mini all"
-  ]
+  ],
+  "lint-staged": {
+    "linters": {
+      "*.{ts,tsx,js,jsx,json,scss,css,md}, !*.min.js": [
+        "prettier --write",
+        "git add"
+      ],
+      "*.{js,jsx,ts,tsx}, !*.min.js": [
+        "eslint -c .eslintrc --fix",
+        "echo test",
+        "git add"
+      ],
+      "**/*.scss": [
+        "stylelint --syntax scss",
+        "git add"
+      ]
+    }
+  }
 }
