--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -15,15 +15,18 @@
   },
   "directories": {
     "src": "src",
-    "test": "__tests__"
+    "test": "tests"
   },
   "scripts": {
     "build": "webpack --progress --config ./webpack.config.prod.js",
     "dev": "webpack-dev-server --open --config ./webpack.config.dev.js",
     "check": "npm-run-all lint format stylelint",
     "format": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
+    "format:fix": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "eslint . --ext \".js,.jsx,.ts,.tsx\"",
-    "stylelint": "stylelint src/**/*.scss --cache"
+    "lint:fix": "eslint ./ --ext \".js,.jsx,.ts,.tsx\" --max-warnings=0 --fix",
+    "stylelint": "stylelint src/**/*.scss --cache",
+    "stylelint:fix": "stylelint src/**/*.scss --cache --fix"
   },
   "dependencies": {
     "react": "16.11.0",
@@ -53,7 +56,6 @@
     "eslint-plugin-react": "7.16.0",
     "eslint-plugin-react-hooks": "2.1.2",
     "html-webpack-plugin": "3.2.0",
-    "lint-staged": "9.4.2",
     "mini-css-extract-plugin": "0.8.0",
     "node-sass": "4.12.0",
     "npm-run-all": "4.1.5",
