--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -22,7 +22,9 @@
     "check": "npm-run-all lint format",
     "dev": "ts-node-dev --project ./tsconfig.json --respawn --transpileOnly ./src/index.ts",
     "format": "prettier --check \"src/**/*.{js,ts}\"",
-    "lint": "eslint . --ext \".js,.ts\""
+    "format:fix": "prettier --write \"src/**/*.{js,ts}\"",
+    "lint": "eslint . --ext \".js,.ts\"",
+    "lint:fix": "eslint ./ --ext \".js,.ts\" --max-warnings=0 --fix"
   },
   "dependencies": {
     "body-parser": "1.19.0",
@@ -45,7 +47,7 @@
     "eslint-import-resolver-alias": "1.1.2",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-prettier": "3.1.1",
-    "lint-staged": "9.4.2",
+    "npm-run-all": "4.1.5",
     "prettier": "1.18.2",
     "ts-node-dev": "1.0.0-pre.44",
     "typescript": "3.6.4"
