--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
   },
   "devDependencies": {
     "husky": "3.0.9",
-    "lerna": "3.18.3",
-    "lint-staged": "9.4.2"
+    "lerna": "3.18.3"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run check",
+      "pre-commit": "lerna run precommit --concurrency 1 --stream ",
       "pre-push": "npm run check"
     }
   }
