--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -25,6 +25,7 @@
     "format:fix": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "eslint . --ext \".js,.jsx,.ts,.tsx\"",
     "lint:fix": "eslint ./ --ext \".js,.jsx,.ts,.tsx\" --max-warnings=0 --fix",
+    "precommit": "lint-staged",
     "stylelint": "stylelint src/**/*.scss --cache",
     "stylelint:fix": "stylelint src/**/*.scss --cache --fix"
   },
@@ -56,6 +57,7 @@
     "eslint-plugin-react": "7.16.0",
     "eslint-plugin-react-hooks": "2.1.2",
     "html-webpack-plugin": "3.2.0",
+    "lint-staged": "9.4.2",
     "mini-css-extract-plugin": "0.8.0",
     "node-sass": "4.12.0",
     "npm-run-all": "4.1.5",
@@ -82,20 +84,18 @@
     "not op_mini all"
   ],
   "lint-staged": {
-    "linters": {
-      "*.{ts,tsx,js,jsx,json,scss,css,md}, !*.min.js": [
-        "prettier --write",
-        "git add"
-      ],
-      "*.{js,jsx,ts,tsx}, !*.min.js": [
-        "eslint -c .eslintrc --fix",
-        "echo test",
-        "git add"
-      ],
-      "**/*.scss": [
-        "stylelint --syntax scss",
-        "git add"
-      ]
-    }
+    "*.{ts,tsx,js,jsx,json,scss,css,md}, !*.min.js": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.{js,jsx,ts,tsx}, !*.min.js": [
+      "eslint -c .eslintrc --fix",
+      "echo test",
+      "git add"
+    ],
+    "**/*.scss": [
+      "stylelint --syntax scss",
+      "git add"
+    ]
   }
 }
