--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,7 +24,8 @@
     "format": "prettier --check \"src/**/*.{js,ts}\"",
     "format:fix": "prettier --write \"src/**/*.{js,ts}\"",
     "lint": "eslint . --ext \".js,.ts\"",
-    "lint:fix": "eslint ./ --ext \".js,.ts\" --max-warnings=0 --fix"
+    "lint:fix": "eslint ./ --ext \".js,.ts\" --max-warnings=0 --fix",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "body-parser": "1.19.0",
@@ -47,6 +48,7 @@
     "eslint-import-resolver-alias": "1.1.2",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-prettier": "3.1.1",
+    "lint-staged": "9.4.2",
     "npm-run-all": "4.1.5",
     "prettier": "1.18.2",
     "ts-node-dev": "1.0.0-pre.44",
@@ -57,16 +59,14 @@
     "@modules": "src/modules"
   },
   "lint-staged": {
-    "linters": {
-      "*.{ts,tsx,js,jsx,json,md}, !*.min.js": [
-        "prettier --write",
-        "git add"
-      ],
-      "*.{js,jsx,ts,tsx}, !*.min.js": [
-        "eslint -c .eslintrc --fix",
-        "echo test",
-        "git add"
-      ]
-    }
+    "*.{ts,tsx,js,jsx,json,md}, !*.min.js": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.{js,jsx,ts,tsx}, !*.min.js": [
+      "eslint -c .eslintrc --fix",
+      "echo test",
+      "git add"
+    ]
   }
 }
