--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -35,14 +35,18 @@
     "body-parser": "1.19.0",
     "cors": "2.8.5",
     "express": "4.17.1",
+    "express-graphql": "0.9.0",
     "module-alias": "2.2.2",
     "mysql2": "2.1.0",
+    "reflect-metadata": "0.1.13",
+    "type-graphql": "0.17.6",
     "typeorm": "0.2.22"
   },
   "devDependencies": {
     "@types/body-parser": "1.17.1",
     "@types/cors": "2.8.6",
     "@types/express": "4.17.2",
+    "@types/graphql": "14.5.0",
     "@types/node": "13.1.1",
     "@typescript-eslint/eslint-plugin": "2.13.0",
     "@typescript-eslint/parser": "2.13.0",
@@ -52,6 +56,7 @@
     "eslint-import-resolver-alias": "1.1.2",
     "eslint-plugin-import": "2.19.1",
     "eslint-plugin-prettier": "3.1.2",
+    "graphql": "14.5.8",
     "lint-staged": "9.5.0",
     "npm-run-all": "4.1.5",
     "prettier": "1.19.1",
