--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "author": {
     "name": "Aleksander Fret",
     "email": "olekfret80@gmail.com",
-    "url": "https://github.com/alemikolo/"
+    "url": "https://github.com/aleksanderfret/"
   },
   "license": "MIT",
   "private": true,
-  "homepage": "https://github.com/alemikolo/plan-event#readme",
+  "homepage": "https://github.com/aleksanderfret/plan-event#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alemikolo/plan-event.git"
+    "url": "git+https://github.com/aleksanderfret/plan-event.git"
   },
   "bugs": {
-    "url": "https://github.com/alemikolo/plan-event/issues"
+    "url": "https://github.com/aleksanderfret/plan-event/issues"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap",
@@ -27,8 +27,8 @@
     "reset": "lerna clean --yes && npm ci"
   },
   "devDependencies": {
-    "husky": "3.1.0",
-    "lerna": "3.20.0"
+    "husky": "4.2.1",
+    "lerna": "3.20.2"
   },
   "husky": {
     "hooks": {
