--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -5,17 +5,17 @@
   "author": {
     "name": "Aleksander Fret",
     "email": "olekfret80@gmail.com",
-    "url": "https://github.com/alemikolo/"
+    "url": "https://github.com/aleksanderfret/"
   },
   "license": "MIT",
   "main": "src/app/index.tsx",
-  "homepage": "https://github.com/alemikolo/plan-event#readme",
+  "homepage": "https://github.com/aleksanderfret/plan-event#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alemikolo/plan-event.git"
+    "url": "git+https://github.com/aleksanderfret/plan-event.git"
   },
   "bugs": {
-    "url": "https://github.com/alemikolo/plan-event/issues"
+    "url": "https://github.com/aleksanderfret/plan-event/issues"
   },
   "directories": {
     "public": "public",
@@ -64,7 +64,7 @@
     "html-webpack-plugin": "3.2.0",
     "lint-staged": "9.5.0",
     "mini-css-extract-plugin": "0.9.0",
-    "node-sass": "4.13.0",
+    "node-sass": "4.13.1",
     "npm-run-all": "4.1.5",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "path": "0.12.7",
