--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -35,33 +35,28 @@
     "body-parser": "1.19.0",
     "cors": "2.8.5",
     "express": "4.17.1",
-    "express-graphql": "0.9.0",
     "module-alias": "2.2.2",
     "mysql2": "2.1.0",
     "reflect-metadata": "0.1.13",
-    "type-graphql": "0.17.6",
-    "typeorm": "0.2.22"
+    "typeorm": "0.2.26"
   },
   "devDependencies": {
-    "@types/body-parser": "1.17.1",
-    "@types/cors": "2.8.6",
-    "@types/express": "4.17.2",
-    "@types/graphql": "14.5.0",
-    "@types/node": "13.1.1",
-    "@typescript-eslint/eslint-plugin": "2.13.0",
-    "@typescript-eslint/parser": "2.13.0",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb-base": "14.0.0",
-    "eslint-config-prettier": "6.9.0",
+    "@types/body-parser": "1.19.0",
+    "@types/cors": "2.8.7",
+    "@types/express": "4.17.8",
+    "@types/node": "14.10.1",
+    "@typescript-eslint/eslint-plugin": "4.1.0",
+    "@typescript-eslint/parser": "4.1.0",
+    "eslint": "7.9.0",
+    "eslint-config-prettier": "6.11.0",
     "eslint-import-resolver-alias": "1.1.2",
-    "eslint-plugin-import": "2.19.1",
-    "eslint-plugin-prettier": "3.1.2",
-    "graphql": "14.5.8",
-    "lint-staged": "9.5.0",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "lint-staged": "10.3.0",
     "npm-run-all": "4.1.5",
-    "prettier": "1.19.1",
-    "ts-node-dev": "1.0.0-pre.44",
-    "typescript": "3.7.4"
+    "prettier": "2.1.1",
+    "ts-node-dev": "1.0.0-pre.62",
+    "typescript": "4.0.2"
   },
   "_moduleAliases": {
     "@common": "src/common",
@@ -69,13 +64,11 @@
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,json,md}, !*.min.js": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ],
     "*.{js,jsx,ts,tsx}, !*.min.js": [
       "eslint -c .eslintrc --fix",
-      "echo test",
-      "git add"
+      "echo test"
     ]
   }
 }
