Update settings and DB for server package

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -2,35 +2,40 @@
   "compilerOptions": {
     "allowJs": true,
     "alwaysStrict": true,
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "importHelpers": true,
     "lib": [
-      "dom",
-      "dom.iterable",
-      "es2015",
-      "es2016.array.include",
-      "es2017.object",
-      "es2017.string",
-      "es2018.asynciterable",
-      "es2018.promise",
-      "es2019.array",
-      "es2019.object",
-      "es2019.string",
-      "es2020.string"
+      "DOM",
+      "DOM.Iterable",
+      "ES2015",
+      "ES2016.Array.Include",
+      "ES2017.Object",
+      "ES2017.String",
+      "ES2018.AsyncIterable",
+      "ES2018.Promise",
+      "ES2019.Array",
+      "ES2019.Object",
+      "ES2019.String",
+      "ES2019.Symbol",
+      "ES2020.Promise",
+      "ES2020.String",
+      "ES2020.Symbol.WellKnown"
     ],
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "noImplicitThis": true,
+    "noUnusedLocals": true,
     "noUnusedParameters": true,
     "outDir": "../../dist",
     "paths": {
-      "@common/*": ["common/*"],
-      "@modules/*": ["modules/*"]
+      "@common/*": ["src/common/*"],
+      "@modules/*": ["src/modules/*"]
     },
+    "pretty": true,
     "removeComments": true,
     "sourceMap": true,
     "strict": true,
