--- a/packages/server/.eslintrc
+++ b/packages/server/.eslintrc
@@ -120,10 +120,8 @@
     "import/resolver": {
       "alias": {
         "map": [
-          ["@app", "./src/app"],
-          ["@db", "./src/db"],
-          ["@modules", "./src/modules"],
-          ["@shared", "./src/shared"]
+          ["@common", "./src/common"],
+          ["@modules", "./src/modules"]
         ],
         "extensions": [".ts", ".js", ".json"]
       }
