--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "build": "tsc --build tsconfig.prod.json",
     "check": "npm-run-all lint format",
-    "dev": "ts-node-dev --project ./tsconfig.json --respawn --transpileOnly ./src/index.ts",
+    "dev": "ts-node-dev --project ./tsconfig.json --watch --respawn --transpile-only ./src/index.ts",
     "format": "prettier --check \"src/**/*.{js,ts}\"",
     "format:fix": "prettier --write \"src/**/*.{js,ts}\"",
     "lint": "eslint . --ext \".js,.ts\"",
@@ -35,8 +35,7 @@
     "body-parser": "1.19.0",
     "cors": "2.8.5",
     "express": "4.17.1",
-    "module-alias": "2.2.2",
-    "mysql2": "2.1.0",
+    "pg": "8.3.3",
     "reflect-metadata": "0.1.13",
     "typeorm": "0.2.26"
   },
@@ -53,6 +52,7 @@
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-prettier": "3.1.4",
     "lint-staged": "10.3.0",
+    "module-alias": "2.2.2",
     "npm-run-all": "4.1.5",
     "prettier": "2.1.1",
     "ts-node-dev": "1.0.0-pre.62",
