--- a/packages/browser/.stylelintrc
+++ b/packages/browser/.stylelintrc
@@ -1,11 +1,23 @@
 {
-  "extends": "stylelint-config-recommended",
+  "extends": ["stylelint-config-standard", "stylelint-config-standard", "stylelint-config-recommended"],
+  "ignoreFiles": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx",],
   "plugins": [
     "stylelint-scss"
   ],
   "rules": {
     "at-rule-no-unknown": null,
+    "color-hex-case": "lower",
+    "color-hex-length": "long",
+    "declaration-block-no-duplicate-properties": true,
+    "declaration-colon-newline-after": null,
+    "indentation": null,
+    "no-descending-specificity": null,
+    "no-duplicate-selectors": true,
     "scss/at-rule-no-unknown": true,
-    "no-descending-specificity": null
+    "selector-combinator-space-before": null,
+    "selector-descendant-combinator-no-non-space": null,
+    "selector-max-compound-selectors": 6,
+    "value-keyword-case": null,
+    "value-list-comma-newline-after": null
   }
 }
