[PE-13] Update browser packafge dependencies and packages.json scripts|

--- a/package.json
+++ b/package.json
@@ -18,22 +18,42 @@
     "url": "https://github.com/aleksanderfret/plan-event/issues"
   },
   "scripts": {
+    "audit": "node scripts/runInDirs.js audit",
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build",
     "check": "lerna run check",
+    "compile": "lerna run compile",
     "create": "lerna create",
     "dev": "lerna run dev --stream",
-    "postinstall": "npm run bootstrap",
-    "reset": "lerna clean --yes && npm ci"
+    "format": "lerna run format",
+    "format:fix": "lerna run format:fix",
+    "hooks": "node scripts/enhancePrepareCommitMessage.js",
+    "lint": "lerna run lint",
+    "lint:fix": "lerna run lint:fix",
+    "outdated": "node scripts/runInDirs.js outdated",
+    "postinstall": "npm-run-all bootstrap hooks",
+    "pre-commit": "lerna run pre-commit --concurrency 1 --stream",
+    "pre-push": "lerna run pre-push --concurrency 1 --stream",
+    "reset": "lerna clean --yes && npm ci",
+    "stylelint": "lerna run stylelint",
+    "stylelint:fix": "lerna run stylelint:fix",
+    "test": "lerna run test"
   },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 10",
+    "not op_mini all"
+  ],
   "devDependencies": {
     "husky": "4.3.0",
-    "lerna": "3.22.1"
+    "lerna": "3.22.1",
+    "npm-run-all": "4.1.5"
   },
   "husky": {
     "hooks": {
       "pre-commit": "lerna run precommit --concurrency 1 --stream ",
-      "pre-push": "npm run check"
+      "pre-push": "npm run pre-push"
     }
   }
 }
